dando ultimos retoques

--- a/index/admin/editar.html
+++ b/index/admin/editar.html
@@ -4,88 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./src/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../src/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/main.css">
     <title>Vault</title>
+    <script src="../../js/route.js"></script>
 </head>
 <body >
-   <nav class="navbar   position-fixed top-0 w-100" id="navbar">
-      <div class="container position-relative d-flex justify-content-start">
-        <a class="navbar-brand  px-2 rounded-pill bg-dark" href="#">
-          <span class="text-primary" >V</span>
-          <span class="text-success" >a</span>
-          <span class="text-warning" >u</span>
-          <span class="text-light" >l</span>
-          <span class="text-danger" >t</span>
-        </a>
-            <!-- <form class="d-flex  navbar-search ps-2" >
-                <input class="d-md-block" type="text" placeholder="Search...">
-                <button class="btn " type="submit">
-                  <img src="./src/search.svg" alt="">
-                </button>
-            </form> -->
-            <a  href="./index/login.html" class="btn btn-outline-warning px-3">Login</a>
-     </div>
-   </nav>
-  <script src="./js/controller/nav.js"></script>
+  <!-- ======= Back Page ======= -->
+  <a onclick="window.history.back()" class="btn position-fixed" style="top: 12%; z-index: 10;" onc >
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16">
+        <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z"/>
+    </svg>  
+  </a>
 
 
-   <main class="container py-5 pb-0">
-    <!-- For Demo Purpose -->
-    <header class="text-center text-white">
-      <h1 class="display-4">Vault</h1>
-      <p class="lead mb-0">
-        Vault es una plataforma que se encarga de recopilar y categorizar herramientas web para diferentes ámbitos, como por ejemplo, diseño gráfico, desarrollo web, productividad, seguridad, SEO, marketing, entre otros.
-      </p>
-      <p class="font-italic"><a href="./index/vault.html" class="text-white">
-          <u>Quiero saber más sobre Vault.</u></a>
-      </p>
-    </header>
-  
-    <section class="py-5">
-      <div class="row">
-
-        <div class="col-lg-9 mx-auto">
-          <article class="card shadow mb-4 w-100 h">
-            <div class="p-2 d-flex  flex-wrap flex-md-nowrap ">
-              <div class="">
-                <img src="./src/uso general.png"  width="120" alt="">
-              </div>
-              <div class="p-2">
-                <a class="h5 text-danger" href="./index/webs.html">Herramientas de uso general </a>
-                <p class="font-italic text-muted">
-                  Las herramientas web de uso general de Vault son una colección de recursos en línea que tienen una amplia variedad de usos y pueden ser útiles para diferentes personas, independientemente de su área de enfoque.  
-                </p>
+    <main class="container m-auto ">
+        <div class="row d-flex justify-content-center mt-5">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                <div class="card py-3 px-2">
+                    
+                    <h1 class="text-center mb-1 mt-2">Editar Web</h1>
+                    
+                    <div class="division">
+                        <div class="row">
+                            <div class="col-3"><div class="line l"></div></div>
+                            <div class="col-3"><div class="line r"></div></div>
+                        </div>
+                    </div>
+                    <form class="myform" id="form" onsubmit="event.preventDefault()" >
+                        <div class="form-group">
+                            <input type="text" name="name" class="form-control" placeholder="Nombre" required>
+                          </div>
+                         <div class="form-group">
+                            <input type="text" name="link" class="form-control" placeholder="enlace" required>
+                          </div>
+                          <div class="form-group">
+                            <textarea type="text" name="description" class="form-control" placeholder="descripción" required>
+                            </textarea>
+                          </div>
+                          <div class="form-group mt-3 d-flex justify-content-center">
+                              <button type="submit"  class="btn btn-block btn-primary btn-lg w-75"><small>accept</small></button>
+                          </div>
+                    </form>
+                </div>
             </div>
-            </div>
-          </article>
         </div>
+    </main>
 
 
-        <div class="col-lg-9 mx-auto">
-          <article class="card shadow mb-4 w-100 h">
-            <div class="p-2 d-flex  flex-wrap flex-md-nowrap ">
-              <div class="">
-                <img src="./src/desarrollo_web.png"  width="120" alt="">
-              </div>
-              <div class="p-2">
-                <a class="h5 text-danger" href="/">Desarrollo Web </a>
-                <p class="font-italic text-muted">
-                  Las herramientas web de desarrollo web de Vault son una recopilación de recursos en línea que están destinados a ayudar a los desarrolladores web en diferentes etapas del proceso de creación de sitios web.
-                </p>
-            </div>
-            </div>
-          </article>
-        </div>
-      </div>
-    </section>
-   </main>
-
-
-  <!-- ======= Footer ======= -->
+      <!-- ======= Footer ======= -->
   <footer id="footer" class="footer bg-dark p-1 text-center text-md-start mt-4 ">
 
     <div class="">
@@ -102,8 +73,8 @@
             <h4>Información</h4>
             <ul class="list-unstyled  ">
               <li> <a href="/" class="nav-link text-light ">Home</a></li>
-              <li> <a href="./index/vault.html" class="nav-link text-light ">About us</a></li>
-              <li> <a href="./index/vault.html" class="nav-link text-light">Privacy policy</a></li>
+              <li> <a href="../vault.html" class="nav-link text-light ">About us</a></li>
+              <li> <a href="../vault.html" class="nav-link text-light">Privacy policy</a></li>
             </ul>
           </div>
 
@@ -141,7 +112,7 @@
       </div>
     </div>
   </footer>
-  <script type="module" src="./js/controller/footerCorreo.js"></script>
+  <script type="module" src="../../js/controller/footerCorreo.js"></script>
 
+    <script type="module" src="../../js/controller/edit.js"></script>
 </body>
-</html>
