--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./src/icon.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/main.css">
     <title>Vault</title>
@@ -21,12 +20,6 @@
           <span class="text-light" >l</span>
           <span class="text-danger" >t</span>
         </a>
-            <!-- <form class="d-flex  navbar-search ps-2" >
-                <input class="d-md-block" type="text" placeholder="Search...">
-                <button class="btn " type="submit">
-                  <img src="./src/search.svg" alt="">
-                </button>
-            </form> -->
             <a  href="./index/login.html" class="btn btn-outline-warning px-3">Login</a>
      </div>
    </nav>
@@ -37,7 +30,7 @@
     <!-- For Demo Purpose -->
     <header class="text-center text-white">
       <h1 class="display-4">Vault</h1>
-      <p class="lead mb-0">
+      <p class="lead mb-0 px-5 ">
         Vault es una plataforma que se encarga de recopilar y categorizar herramientas web para diferentes ámbitos, como por ejemplo, diseño gráfico, desarrollo web, productividad, seguridad, SEO, marketing, entre otros.
       </p>
       <p class="font-italic"><a href="./index/vault.html" class="text-white">
@@ -72,7 +65,7 @@
                 <img src="./src/desarrollo_web.png"  width="120" alt="">
               </div>
               <div class="p-2">
-                <a class="h5 text-danger" href="/">Desarrollo Web </a>
+                <a class="h5 text-danger" href="./index/pending.html">Desarrollo Web </a>
                 <p class="font-italic text-muted">
                   Las herramientas web de desarrollo web de Vault son una recopilación de recursos en línea que están destinados a ayudar a los desarrolladores web en diferentes etapas del proceso de creación de sitios web.
                 </p>
