--- a/index/admin/editar.html
+++ b/index/admin/editar.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../../src/icon.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
     <title>Vault</title>
 </head>
 <body >
